<resources>
    <string name="app_name">PTAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Actions</string>
    <string name="menu_search">Search</string>
    <string name="menu_slideshow">Logs</string>
    <string name="creator_github">Creator GitHub</string>
    <string name="github_link">https://github.com/n0S3curity</string>
    <string name="actions">Actions</string>
    <string name="search">Search</string>
    <string name="logs">Logs</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_logs">logs</string>
    <string name="logs_textbox_hint">Logs</string>
    <string name="clear_console">CLEAR CONSOLE</string>
    <string name="test_notification">Test notification</string>
    <string name="biometric_test">Biometric Test</string>
    <string name="send_intent">Send Intent</string>
    <string name="content_provider">Content Provider</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="open_activity">Open Activity</string>
    <string name="update_package">Update Package</string>
    <string name="current_package">Current Package:</string>
    <string name="extra_name">Extra Name</string>
    <string name="extra_value">Extra Value</string>
</resources>