<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PTAndroid.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PTAndroid.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <TextView
        android:id="@+id/current_package_textview"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="650dp"
        android:text="@string/current_package"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Open_Activity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="20dp"
        android:text="@string/open_activity" />

    <Button
        android:id="@+id/Stop_service"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="65dp"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/Start_service"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="110dp"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/Contet_provider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="155dp"
        android:text="@string/content_provider" />

    <Button
        android:id="@+id/Send_intent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="200dp"
        android:text="@string/send_intent" />

    <Button
        android:id="@+id/Test_notification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="245dp"
        android:text="@string/test_notification" />


    <Button
        android:id="@+id/biometric_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="290dp"
        android:text="@string/biometric_test" />

    <Button
        android:id="@+id/update_package_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="335dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/update_package" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>