<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_actions">

    <fragment
        android:id="@+id/nav_actions"
        android:name="com.ptandroid.ui.actions.ActionsFragment"
        android:label="@string/menu_actions"
        tools:layout="@layout/fragment_actions" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.ptandroid.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="com.ptandroid.ui.logs.LogsFragment"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_logs" />

</navigation>